--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(21, 20, 20, 0.87);
   background-color: #ECE4DE;
 
